--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+aiofiles==24.1.0
+aiogoogle==5.15.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
 aiosqlite==0.17.0
 alembic==1.7.7
 anyio==3.7.1
 asgiref==3.8.1
+async-timeout==5.0.1
+attrs==25.3.0
 bcrypt==4.3.0
+cachetools==5.5.2
 cffi==1.17.1
 click==8.1.8
 cryptography==44.0.2
@@ -11,6 +19,8 @@ email-validator==1.2.1
 fastapi==0.78.0
 fastapi-users==10.0.6
 fastapi-users-db-sqlalchemy==4.0.5
+frozenlist==1.6.0
+google-auth==2.40.1
 greenlet==3.1.1
 h11==0.14.0
 httptools==0.6.4
@@ -18,19 +28,27 @@ idna==3.10
 makefun==1.13.1
 Mako==1.3.10
 MarkupSafe==3.0.2
+multidict==6.4.3
 passlib==1.7.4
+propcache==0.3.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==1.10.21
 PyJWT==2.4.0
 python-dotenv==1.1.0
 python-multipart==0.0.5
 PyYAML==6.0.2
+rsa==4.9.1
+setuptools==78.1.0
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==1.4.54
 starlette==0.19.1
+tonyg-rfc3339==0.1
 typing_extensions==4.13.2
 uvicorn==0.17.6
 uvloop==0.21.0
 watchgod==0.8.2
 websockets==15.0.1
+yarl==1.20.0
